--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tiny-app",
   "version": "1.0.0",
   "description": "A full stack web app built with Node and Express that allows users to shorten long URLs (à la bit.ly).",
-  "main": "server.js",
+  "main": "express_server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
