--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bdhunter3141/tiny-app#readme",
   "dependencies": {
+    "body-parser": "^1.18.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4"
   }
